--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <meta charset="UTF-8">
     <title>{{htmlWebpackPlugin.options.title}}</title>
+    <style>
+        * {box-sizing: border-box; }
+        body { font: 13px Helvetica, Arial; height: 100%; overflow: hidden;}
+
+        .left {display: block; float: left; width: 300px; min-height: 100vh; background-color: orangered;}
+
+
+        form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+        form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+        #messages { list-style-type: none; margin: 0; padding: 0; }
+        #messages li { padding: 5px 10px; }
+        #messages li:nth-child(odd) { background: #eee; }
+    </style>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 </head>
 <body>
+
+<div id="left" class="left">
+    <div id="profile" class="profile"></div>
+    <div class="users">
+        <ul class="users-list"></ul>
+    </div>
+</div>
+<div id="right">
+    <ul id="messages"></ul>
+    <form action="">
+        <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
+</div>
+
+
 
 </body>
 </html>
